# multiwaypoint_navigation

./: README.md
launch/: custom_world.launch.py  gazebo_world.launch.py  gz_bridge.launch.py  lidar_detection.launch.py
scripts/: ball_follower.py  nav2_patrol.py  sensor_fusion_node.py
tortoisebot_description/urdf/: tortoisebot.urdf.xacro
tortoisebot_localization/: CMakeLists.txt  package.xml
tortoisebot_localization/config/: mapper_params_online_async.yaml  twist_mux.yaml
tortoisebot_localization/launch/: multiwaypoint.launch.py
tortoisebot_localization/scripts/: multiwaypoint.py
tortoisebot_navigation/: CMakeLists.txt  package.xml
tortoisebot_navigation/config/: bridge.yaml  navigation.yaml  slam.yaml
tortoisebot_navigation/launch/: navigation_launch.py  slam_launch.py
tortoisebot_navigation/rviz/: navigation.rviz
